Corrige bug de excluir turmas